--- a/pages/index.html
+++ b/pages/index.html
@@ -4,12 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="/main.css">
 </head>
 <body>
   <nav>
     <a href="/">Home</a>
     <a href="/away">Away</a>
   </nav>
-  <h1>Away</h1>
+  <h1>Home</h1>
+  <img src="/img/home.png" width="400">
 </body>
 </html>
