--- a/pages/index.html
+++ b/pages/index.html
@@ -10,6 +10,7 @@
   <nav>
     <a href="/">Home</a>
     <a href="/away">Away</a>
+    <a href="/page3">page3</a>
   </nav>
   <h1>Home</h1>
   <img src="/img/home.png" width="400">
